@@ -123,6 +123,10 @@ wxValidator *           O_WXOBJECT
 wxCheckBox *            O_WXEVTHANDLER
 wxChoice *              O_WXEVTHANDLER
 wxComboBox *            O_WXEVTHANDLER
+wxComboCtrl *           O_WXEVTHANDLER
+wxComboCtrlBase *       O_WXEVTHANDLER
+wxComboPopup *          O_NON_WXOBJECT
+wxPlComboPopup *        O_NON_WXOBJECT
 wxControlWithItems *    O_WXOBJECT
 wxEditableListBox *     O_WXOBJECT
 wxListBox *             O_WXEVTHANDLER
